--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center; 
     margin-top: 15%;
-    font-family: 'Roboto', sans-serif;
+    
     
 }
 
@@ -11,8 +11,7 @@
     width: 300px;
 }
 .message{
-    border-bottom: solid 2px #F59D33;
-    border-top: solid 2px #F59D33;
-    padding:  10px 0;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
     
 }
