--- a/css/style.css
+++ b/css/style.css
@@ -2,16 +2,92 @@
     display: flex;
     justify-content: center;
     align-items: center; 
-    margin-top: 15%;
-    
-    
-}
-
-#logo{
-    width: 300px;
-}
-.message{
+    flex-direction: column;
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
+    font-size: 18px;
+    
+    
+    
+}
+.poster{
+    width: 547px;
+    height: 694px;
+    background-image: url("../img/bg2.png");
+   
+    background-repeat: no-repeat;
+    color: white;
+    padding-top: 150px;
+    padding-left: 14px;
+    padding-bottom: 14px;
+    
+  
+}
+
+.contact{
+  padding-top: 25px;
+
+}
+.contact dt a{
+  color: white;
+  text-decoration:none;
+
+}
+.contact dt a:hover{
+  color: rgb(167, 170, 9);
+  text-decoration:none;
+
+}
+.divider{
+   margin: 5px 0;
+   width: 220px;
+   border: none;
+    height: 1px;
+    color:white; /* old IE */
+    background-color:white; 
+}
+
+.links{
+    padding-top: 50px;
+    color: black;
+    
+}
+.links dt{
+    margin: 15px 0;
+    
+}
+.links dt a{
+    padding-top: 50px;
+    
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: 700;
+    letter-spacing: 1px;
+    
+    padding:5px;
+    background-color: white;
+    transition: font-size 0.2s  ease;
+}
+.links dt:nth-child(2) a {
+    color: #004B5D;
+    padding:5px 18px 5px 5px;
+    
+}
+.links dt:last-child a {
+    color:#F99C2C;
+    
+}
+.links dt a:hover{
+    /* color:#ff0066; */
+    font-size: 1.08em;
+    transition: font-size 0.2s  ease;
+}
+.links dt:first-child {
+    padding-bottom: 0px;
+    font-weight: 400;
+    
+}
+.links dt:last-child {
+    padding-bottom: 0px;
     
 }
