--- a/css/style.css
+++ b/css/style.css
@@ -13,15 +13,19 @@
 .poster{
     width: 547px;
     height: 694px;
-    background-image: url("../img/bg2.png");
+    background-image: url("../img/bg2.jpg");
    
     background-repeat: no-repeat;
-    color: white;
-    padding-top: 150px;
-    padding-left: 14px;
-    padding-bottom: 14px;
     
-  
+    
+}
+.text{
+    color: white;
+    padding-top: 87px;
+    padding-left: 14px;
+    padding-right: 14px;
+    padding-bottom: 14px;
+
 }
 
 .contact{
@@ -48,7 +52,7 @@
 }
 
 .links{
-    padding-top: 50px;
+    padding-top: 40px;
     color: black;
     
 }
@@ -57,7 +61,7 @@
     
 }
 .links dt a{
-    padding-top: 50px;
+    
     
     text-decoration: none;
     text-transform: uppercase;
@@ -90,4 +94,20 @@
 .links dt:last-child {
     padding-bottom: 0px;
     
+}
+.message{
+    position: relative;
+    left: 16rem;
+    top: 35rem;
+    width: 245px;
+    
+    padding: 0.3rem 1rem;
+    
+    color:#0b5b5df7;
+    font-weight: 400;
+    background-color: white;
+    
+    /* transform-origin: right top; */
+    transform: skewY(-2deg);
+
 }
